# Whale

./: Cargo.toml  README.md
app/: Cargo.toml  Trunk.toml  index.html  main.scss  tailwind.config.js
app/src/: constants.rs  lib.rs  main.rs
app/src/components/: footer.rs  header.rs  mod.rs
app/src/components/main/: loading.rs  mod.rs
app/src/components/main/routing/: error.rs  home.rs  index.rs  info.rs  mod.rs  practice.rs
scripts/: check.py  convert.py  lekce5.txt  ssd-lekce5.xlsx
server/: Cargo.toml
server/content/: index.json  slovesa.json  slovesa_test.json  ssd-lekce1.json  ssd-lekce2.json  ssd-lekce3.json  ssd-lekce4.json  ssd-lekce5.json
server/src/: main.rs
whale/: Cargo.toml
whale/src/: lib.rs
