[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = [ "CrumblyLiquid" ]

[dependencies]
yew = { version = "0.20", features = ["csr"] }
# stylist = { version = "0.11.0", features = ["yew_integration"] }
# gloo = "0.8"
gloo-net = { version = "0.2", features = ["json"] }
gloo-console = "0.2"
gloo-utils = "0.1.6"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
whale = { path = "../whale"}
yew-router = "0.17"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]
